--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       <div class="inventory-container">
         <h1>Inventory</h1>
         <ul></ul>
+        <div class="pagination-container">
+          <button class="inventory__prev-btn">prev</button>
+          <div class="inventory__pagination-pages"></div>
+          <button class="inventory__next-btn">next</button>
+        </div>
       </div>
       <div class="cart-container">
         <h1>Shopping Cart</h1>
